# FMPR

./: README.md  configure  configure.ac  eval.R  example.R  experiments.R  experiments3.R  exprutil.R  figures.R  gflasso.sh  grouplasso.R  groupridge.R  groupridge.c  l1l2.R  lasso-l1l2.R  lasso.R  methods.R  mpgl-experiments.R  mpgl-real.R  mpgl.R  paper_plot.R  plotexper.R  simulations.R  spg.sh  test_fmpr.R  test_groupridge.R  timing.R
Data/: simulate.R
FMPR/: DESCRIPTION  LICENSE  NAMESPACE  README
FMPR/R/: eval.R  exprutil.R  methods.R  plotexper.R  spg.R  testspg.R
FMPR/data/: chr22.RData  clin.RData  enzymes.RData
FMPR/inst/doc/: FMPR.rnw  fmpr.rnw
FMPR/man/: R2.Rd  blockX.Rd  crossval.elnet.Rd  crossval.fmpr.Rd  crossval.lasso.Rd  crossval.ridge.Rd  crossval.spg.Rd  fmpr.Rd  gennetwork.Rd  getB.Rd  graph.abs.Rd  graph.ind.Rd  graph.sqr.Rd  lasso.Rd  maxlambda1.Rd  optim.elnet.Rd  optim.fmpr.Rd  optim.lasso.Rd  optim.ridge.Rd  optim.spg.Rd  plot.exper.Rd  ridge.Rd  spg.Rd
FMPR/src/: Makevars  fmpr.c  spg.c
timing/: makematlab.R  run.m  timing.R  timingplot.R
